# celeste-old

./: .editorconfig  .eslintrc.js  .gitignore  .gitpod.Dockerfile  .gitpod.yml  .prettierrc.json  BACKEND-NOTES.md  DEVELOPMENT.md  FRONTEND-NOTES.md  LICENSE  NOTES.md  README.md  TODO.md  package.json
.github/ISSUE_TEMPLATE/: bug_report.md
config/: env.js  getHttpsConfig.js  paths.js  webpack.config.js  webpackDevServer.config.js
public/: index.html  manifest.json  splashscreen.html
scripts/: start.js
src/: index.tsx
src-tauri/: Cargo.toml  config.ini  tauri.conf.json
src-tauri/src/: config.rs  database.rs  main.rs  setup.rs  structures.rs
src/assets/styles/: main.css
src/assets/styles/components/: buttons.css
src/assets/styles/shared/: base.module.css  reset.module.css  variables.module.css
src/components/: Avatar.tsx  Button.tsx  Header.tsx  Test.jsx
src/components/Avatars/: Bauhaus.tsx  Beam.jsx  Marble.tsx  Pixel.tsx  Ring.tsx  Sunset.tsx
src/components/Buttons/: Button.tsx
src/layouts/: Main.tsx
src/stories/: Avatar.stories.tsx  Button.stories.tsx  Introduction.stories.mdx
src/utils/: avatar.js
