[package]
name = 'app'
version = '0.1.0'
description = 'A small and cozy Matrix client inspired by Powercord.'
authors = ['Luna Nova <her@mint.lgbt>', 'Erin Nova <contact@the-system.eu.org>']
license = 'MIT'
repository = 'https://github.com/lunaisnotaboy/celeste'
default-run = 'app'
edition = '2021'
rust-version = '1.57'

[build-dependencies]
tauri-build = { version = '1.0.0-rc.0', features = [] }

[dependencies]
serde_json = '1.0'
serde = { version = '1.0', features = ['derive'] }
tauri = { version = '1.0.0-rc.2', features = ["api-all", "cli", "system-tray"] }

log = '0.4.14'
env_logger = '0.9.0'
rand = '0.8.5'
configparser = '3.0.0'
sled = { version = '0.34.7' }
bincode = { version = '2.0.0-beta.3', features = ['serde'] }
matrix-sdk = { version = '0.4.1', features = ['markdown', 'socks'] }

[features]
default = ['custom-protocol']
custom-protocol = ['tauri/custom-protocol']
